--- a/lab3_oled_dht11.ioc
+++ b/lab3_oled_dht11.ioc
@@ -23,11 +23,12 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PB8
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SYS_VS_tim1
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB7
+Mcu.Pin11=PB8
+Mcu.Pin12=PB9
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin14=VP_SYS_VS_tim1
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PF12
@@ -36,7 +37,7 @@ Mcu.Pin6=PD8
 Mcu.Pin7=PD9
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -69,6 +70,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LED_B14
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=LED_PB7
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=SCL
 PB8.Locked=true
